tests-integration/fixtures/checking/133_derive_eq_partial/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Left :: forall (a :: Type) (b :: Type). (a :: Type) -> Either (a :: Type) (b :: Type)
Right :: forall (a :: Type) (b :: Type). (b :: Type) -> Either (a :: Type) (b :: Type)

Types
Either :: Type -> Type -> Type

Data
Either
  Quantified = :0
  Kind = :0


Roles
Either = [Representational, Representational]

Derived
derive Eq (b :: Type) => Eq (Either Int (b :: Type) :: Type)
derive Eq (Either Int (b :: Type) :: Type)

Diagnostics
error[NoInstanceFound]: No instance found for: Eq (b :: Type)
  --> 9:1..9:34
  |
9 | derive instance Eq (Either Int b)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
